--- a/index.html
+++ b/index.html
@@ -1,55 +1,44 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <!-- Metadata, title, stylesheets, and scripts go here -->
-    <title>Form Validation</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="index.css" />
+    <title>Form Validator</title>
+  </head>
+  <body>
     <div class="container">
-        <div class="header">
-            <h2>Create Account</h2>
-
+      <form id="form" class="form">
+        <h2>Register With Us</h2>
+        <div class="form-control">
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter username" />
+          <small>Error message</small>
         </div>
-        <form id="form" class="form">
-            <div class="form-control">
-                <label for="username">UserName</label>
-                <input type="text" placeholder="Enter your name" id="username"/>
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Error message</small>
-
-            </div>
-            <div class="form-control">
-                <label for="email">Email </label>
-                <input type="email" placeholder="Enter email address" id="email"/>
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Please enter a valid email.</small>
-            </div>
-            <div class="form-control">
-                <label for="username">Password</label>
-                <input type="password" placeholder="Enter password" id="password1"/>
-                <i class="fas fa-eye toggle-password eyeIcon"></i>
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Your Password must be at least 8 characters long. It should contain both uppercase
-            </div>
-            <div class="form-control">
-                <label for="username">Password Check</label>
-                <input type="password" placeholder="Password check" id="password2"/>
-                <i class="fas fa-eye toggle-password eyeIcon"></i>
-                <i class="fas fa-check-circle"></i>
-                <i class="fas fa-exclamation-circle"></i>
-                <small>Check Password</small>
-            </div>
-            <div class="field btn">
-            <button type="submit" form="form" value="Submit Form">Sign Up!</button>
-        </div >
-            <script src="index.js"></script>
-        </form>
-
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input type="text" id="email" placeholder="Enter email" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter password" />
+          <small>Error message</small>
+        </div>
+        <div class="form-control">
+          <label for="password2">Confirm Password</label>
+          <input
+            type="password"
+            id="password2"
+            placeholder="Enter password again"
+          />
+          <small>Error message</small>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
     </div>
-    <!-- Content of the web page goes here -->
-</body>
+
+    <script src="index.js"></script>
+  </body>
 </html>
